@@ -1,2 +1,3 @@
 - New API to control implementation wrapper generation.
 - Keep members original XML documentation.
+- Forward Obsolete attribute.
